Fix wrapping behavior of code in tables (#3838)

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -68,3 +68,8 @@
 .md-typeset .admonition {
   font-size: 100%;
 }
+
+/* fix wrapping behavior of code in tables */
+.md-typeset table code {
+  word-break: normal;
+}
